GCP/firewall.json
{
  "allowed": [
    {
      "IPProtocol": "tcp",
      "ports": [
        "5000",
        "5001"
      ]
    },
    {
      "IPProtocol": "udp",
      "ports": [
        "5000",
        "5001"
      ]
    }
  ],
  "creationTimestamp": "2024-07-23T05:07:33.312-07:00",
  "description": "",
  "direction": "INGRESS",
  "disabled": false,
  "enableLogging": false,
  "id": "5143580784408536042",
  "kind": "compute#firewall",
  "logConfig": {
    "enable": false
  },
  "name": "allow-5000-5001",
  "network": "projects/rosy-element-430214-b0/global/networks/default",
  "priority": 1000,
  "selfLink": "projects/rosy-element-430214-b0/global/firewalls/allow-5000-5001",
  "sourceRanges": [
    "0.0.0.0/0"
  ]
}
